Red ball added, correctly hides behind shells

--- a/styles/home.css
+++ b/styles/home.css
@@ -15,3 +15,13 @@
 #shell-img {
     width: 100%;
 }
+.red-ball {
+    height: 50px;
+    width: 50px;
+    top: 250px;
+    background-color: red;
+    border-radius: 50%;
+    border: 2px solid black;
+    position: absolute;
+    z-index: -1;
+}
